// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard custom colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard dataFilter 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard empty 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="iot--card--empty-message-wrapper"
            style={
              Object {
                "--card-content-padding": "16px",
              }
            }
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard empty for a range 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard highlight alert ranges 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kGvWug"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard isEditable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 jbTSBO"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard large / units 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard locale 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-pressure"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Pressure"
          >
            <div
              className="iot--card--title--text"
            >
              Pressure
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard lots of dots 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kGvWug"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard multi line - (No X/Y Label) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard single line 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard single point 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TimeSeriesCard with variables 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem4",
          "width": "252px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="facility-temperature"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Temperature working"
          >
            <div
              className="iot--card--title--text"
            >
              Temperature working
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 kjKxHK"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
